first face detection is not as good as i want it to be, which is why I will be using mediapipe from google to try to improve on that

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,9 @@
   "dockerComposeFile": "../docker-compose.yml",
   "service": "thesis-notebook",
   "workspaceFolder": "/bachelorthesis",
+  "mounts": [
+    "source=${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached"
+  ],
   "customizations": {
     "vscode": {
       "settings": {
@@ -15,4 +18,5 @@
     }
   },
   "shutdownAction": "stopCompose"
+  
 }
